new data archives + ReactApiPort

--- a/mongo/.env
+++ b/mongo/.env
@@ -1,7 +1,7 @@
 NODE_ENV="development"
 PORT=3000
 
-REACT_API_PORT="http://localhost:5173"
+REACT_API_PORT="5173"
 
 MONGODB_URI="mongodb://localhost:27017"
 MONGODB_DB="test"
