--- a/mongo/package.json
+++ b/mongo/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --watch src --exec \"ts-node -r tsconfig-paths/register src/index.ts\"",
+    "dev": "nodemon --watch src --ext ts,json --exec \"ts-node -r tsconfig-paths/register src/index.ts\"",
     "github": "nodemon -L --exec \"ts-node -r tsconfig-paths/register src/index.ts\"",
     "dev:types": "concurrently \"nodemon -L --exec ts-node -r tsconfig-paths/register src/index.ts\" \"tsc -w\"",
     "build": "tsc --build --clean && tsc --build",
