--- a/mongo/tsconfig.json
+++ b/mongo/tsconfig.json
@@ -8,7 +8,7 @@
       "@middleware/*": ["./src/_middleware/*"],
       "@services/*": ["./src/services/*"],
       "@schemas/*": ["./src/_joiSchemas/*"],
-      "*": ["./*"],
+      "*": ["./*"]
     },
     "sourceMap": false,
     "moduleResolution": "nodenext",
@@ -21,7 +21,7 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src", "src/_config"],
   "exclude": ["node_modules", "dist", "src/test"],
