--- a/reactviteStore/package.json
+++ b/reactviteStore/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.8.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.4.2",
     "redux-thunk": "^3.1.0",
     "socket.io": "^4.8.1",
@@ -42,6 +43,7 @@
     "@eslint/js": "^9.35.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@types/redux-persist": "^4.0.0",
     "@vitejs/plugin-react": "^4.7.0",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.35.0",
